<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>net.b07z.sepia.server.assist</groupId>
	<artifactId>sepia-assist-API</artifactId>
	<version>2.5.0</version>
	<name>SEPIA Assist API</name>
	<description>Core server of the SEPIA Framework for personal digital assistants. Responsible for NLU, conversation, smart-service integration, user-accounts and more.</description>
	<url>https://sepia-framework.github.io</url>
	<packaging>jar</packaging>
  
  	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
  	</licenses>
  
  	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<java.version>1.8</java.version>
		<kotlin.version>1.3.71</kotlin.version>
  	</properties>
      
	<build>
		<plugins>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<goals> 
							<goal>compile</goal>
						</goals>
						<configuration>
							<sourceDirs>
								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
								<sourceDir>${project.basedir}/src/main/java</sourceDir>
							</sourceDirs>
						</configuration>
					</execution>
					<execution>
						<id>test-compile</id>
						<goals>
							<goal>test-compile</goal>
						</goals>
						<configuration>
							<sourceDirs>
								<sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
								<sourceDir>${project.basedir}/src/test/java</sourceDir>
							</sourceDirs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <version>3.1</version>
			    <configuration>
			        <source>${java.version}</source>
			        <target>${java.version}</target>
			    </configuration>
			    <executions>
			        <execution>
			            <id>default-compile</id>
			            <phase>none</phase>
			        </execution>
			        <execution>
			            <id>default-testCompile</id>
			            <phase>none</phase>
			        </execution>
			        <execution>
			            <id>java-compile</id>
			            <phase>compile</phase>
			            <goals>
			                <goal>compile</goal>
			            </goals>
			        </execution>
			        <execution>
			            <id>java-test-compile</id>
			            <phase>test-compile</phase>
			            <goals>
			                <goal>testCompile</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/release/libs</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>
							<mainClass>
								net.b07z.sepia.server.assist.server.Start
							</mainClass>
						</manifest>
					</archive>
					<outputDirectory>${project.build.directory}/release</outputDirectory>
					<finalName>sepia-assist-v${project.version}</finalName>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources-1</id>
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/release/Xtensions</outputDirectory>
							<resources>          
								<resource>
									<directory>Xtensions</directory>
									<!--<filtering>true</filtering>-->
								</resource>
							</resources>              
						</configuration>            
					</execution>
				</executions>
			</plugin>
			<!-- force certain surefire version for testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
			</plugin>
			
			<!-- Java docs, use with: mvn javadoc:jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<doclint>none</doclint> <!-- TODO: fix errors found by linter -->
					<finalName>sepia-assist-v${project.version}</finalName>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>net.b07z.sepia.websockets</groupId>
			<artifactId>sepia-websockets</artifactId>
			<version>1.3.0</version>
		</dependency>
		<!-- included in sepia-websockets 
		<dependency>
			<groupId>net.b07z.sepia.server.core</groupId>
			<artifactId>sepia-core-tools</artifactId>
			<version></version>
		</dependency>
		 -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.5.0-b01</version>
		</dependency>
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>1.12.0</version>
		</dependency>

    	<!-- Kotlin -->
    	<dependency>
        	<groupId>org.jetbrains.kotlin</groupId>
        	<artifactId>kotlin-stdlib-jdk8</artifactId>
        	<version>${kotlin.version}</version>
    	</dependency>
		
		<!-- Add JUnit and kotlin-test but only for testing (scope) -->
		<dependency>
      		<groupId>junit</groupId>
      		<artifactId>junit</artifactId>
      		<version>4.12</version>
      		<scope>test</scope>
    	</dependency>
    	<dependency>
    		<groupId>org.jetbrains.kotlin</groupId>
		    <artifactId>kotlin-test</artifactId>
		    <version>${kotlin.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.jetbrains.kotlin</groupId>
		    <artifactId>kotlin-test-junit</artifactId>
		    <version>${kotlin.version}</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>

</project>
